--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "scripts": {
     "start": "webpack-dev-server --progress",
-    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress"
+    "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress",
+    "start:prod": "webpack-dev-server -p --config ./webpack.production.config.js --progress"
   },
   "author": "O'Brian Kimokot",
   "dependencies": {
     "axios": "^0.16.1",
-    "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
     "material-ui": "^0.18.6",
     "react": "^15.5.4",
@@ -25,16 +25,20 @@
     "babel-loader": "^7.0.0",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-env": "^1.4.0",
+    "babel-preset-react": "^6.24.1",
     "bower": "^1.8.0",
+    "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.1",
+    "dotenv": "^5.0.1",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
     "postcss-loader": "^2.0.5",
     "react-tap-event-plugin": "^2.0.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^0.17.0",
-    "uglifyjs-webpack-plugin": "^0.4.3",
+    "uglifyjs-webpack-plugin": "^1.2.2",
     "webpack": "^2.5.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.2"
   }
