--- a/package.json
+++ b/package.json
@@ -1,45 +1,53 @@
 {
   "scripts": {
-    "start": "webpack-dev-server --progress",
+    "start": "./node_modules/.bin/webpack-dev-server --progress",
     "build": "NODE_ENV=production webpack --config ./webpack.production.config.js --progress",
-    "start:prod": "webpack-dev-server -p --config ./webpack.production.config.js --progress"
+    "start:prod": "./node_modules/.bin/webpack-dev-server -p --config ./webpack.production.config.js --progress",
+    "lint:fix": "./node_modules/.bin/eslint --fix . --ext .js,.jsx",
+    "run:pwa": "http-server dist/"
   },
   "author": "O'Brian Kimokot",
+  "licence": "MIT",
   "dependencies": {
-    "axios": "^0.16.1",
-    "express": "^4.15.3",
-    "material-ui": "^0.18.6",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "material-ui": "^0.20.1",
+    "react": "^16.4.0",
+    "react-dom": "^16.4.0",
     "react-redux": "^5.0.4",
-    "react-router": "4.1.1",
-    "react-router-dom": "4.1.1",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^8.5.0",
     "babel": "^6.23.0",
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
-    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-react-transform": "^3.0.0",
     "babel-preset-env": "^1.4.0",
     "babel-preset-react": "^6.24.1",
     "bower": "^1.8.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.1",
     "dotenv": "^5.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "html-webpack-plugin": "^2.28.0",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.8.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "http-server": "^0.11.1",
     "postcss-loader": "^2.0.5",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-tap-event-plugin": "^3.0.2",
     "react-transform-hmr": "^1.0.4",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.2",
-    "webpack": "^2.5.1",
-    "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack": "^4.8.3",
+    "webpack-bundle-analyzer": "^2.13.1",
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.18.2",
+    "workbox-webpack-plugin": "^3.2.0"
   }
 }
